--- a/Project/Home.html
+++ b/Project/Home.html
@@ -8,7 +8,7 @@
     
     <title>Freschezze al volo Piccione</title>
 </head>
-<header class="flex align-baseline justify-between object-center items-center flex-col mt-4 lg:flex-row shadow-lg">
+<header class="flex align-baseline justify-between object-center items-center flex-col lg:flex-row shadow-lg bg-white fixed top-0 right-0 left-0 mt-0 z-50">
     <!--logo wrapper-->
     <div>
     <img src="./IMG/piccionex1.png" alt="freschezze al volo logo png" class="max-w-xs">
@@ -27,10 +27,10 @@
     </div>
     <div class="flex right-0 invisible absolute lg:visible" id="menuwrapper">
         <ul class="flex justify-center items-center flex-col text-4xl shadow-lg border-2 rounded-xl lg:flex-row lg:border-0 lg:shadow-none lg:text-3xl bg-white" style="color: #71086e; z-index: 1;">
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./Home.html"> HOME</a></li>
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./azienda.html"> AZIENDA</a></li>
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./prodotti.html"> PRODOTTI</a></li>
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./contatti.html"> CONTATTI</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./Home.html"> HOME</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./azienda.html"> AZIENDA</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./prodotti.html"> PRODOTTI</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./contatti.html"> CONTATTI</a></li>
         </ul>
 
     </div>
@@ -42,9 +42,9 @@
 <body>
    
     <!--melanzana centrale-->
-    <div class="mt-4" >
+    <div class="container mt-20 mb-20">
         <!--Melanzana wrapper-->
-        <div class="flex justify-center">
+        <div class="flex justify-center pt-20">
             <img src="./IMG/melanzana.png" alt="melanzana viola png" class="lg:max-w-xl">
 
         </div>
@@ -126,7 +126,7 @@
 <!-- call to action for social END-->
 </body>
 <!--footer with company's info-->
-    <footer class="bottom-0 w-full h-auto text-white flex justify-center flex-col lg:flex-row lg:justify-between lg:items-center" style="background-color: #71086e;">
+    <footer class="bottom-0 w-full h-auto text-white flex justify-center flex-col lg:flex-row lg:justify-between lg:items-center" style="background: linear-gradient(17deg, rgba(66,6,66,1) 21%, rgba(200,14,188,1) 100%);">
         <!--Info-->
         <div class="text-center m-4">
             <h1 class="m-2">Freschezze al volo di Piccione</h1>
