--- a/Project/azienda.html
+++ b/Project/azienda.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Freschezze al volo Piccione</title>
+    <title>Freschezze al volo Piccione Azienda</title>
 </head>
-<header class="flex align-baseline justify-between object-center items-center flex-col mt-4 lg:flex-row shadow-lg">
+<header class="flex align-baseline justify-between object-center items-center flex-col lg:flex-row shadow-lg bg-white fixed top-0 right-0 left-0 mt-0 z-50">
     <!--logo wrapper-->
     <div>
     <img src="./IMG/piccionex1.png" alt="freschezze al volo logo png" class="max-w-xs">
@@ -26,10 +26,10 @@
     </div>
     <div class="flex right-0 invisible absolute lg:visible" id="menuwrapper">
         <ul class="flex justify-center items-center flex-col text-4xl shadow-lg border-2 rounded-xl lg:flex-row lg:border-0 lg:shadow-none lg:text-3xl bg-white" style="color: #71086e; z-index: 1;">
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./Home.html"> HOME</a></li>
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./azienda.html"> AZIENDA</a></li>
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./prodotti.html"> PRODOTTI</a></li>
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./contatti.html"> CONTATTI</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./Home.html"> HOME</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./azienda.html"> AZIENDA</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./prodotti.html"> PRODOTTI</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./contatti.html"> CONTATTI</a></li>
         </ul>
 
     </div>
@@ -41,7 +41,7 @@
 <body class="">
    
     <!--Central Phrase-->
-    <div class="flex flex-col justify-center items-center text-3xl mt-10">
+    <div class="flex flex-col justify-center items-center text-4xl mt-20 pt-20 mb-20">
              <h1>La nostra azienda</h1>
              <h2>Freschezze al volo</h2>
     </div>
