--- a/Project/contatti.html
+++ b/Project/contatti.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Freschezze al volo Piccione</title>
 </head>
-<header class="flex align-baseline justify-between object-center items-center flex-col mt-4 lg:flex-row shadow-lg">
+<header class="flex align-baseline justify-between object-center items-center flex-col lg:flex-row shadow-lg bg-white fixed top-0 right-0 left-0 mt-0 z-50">
     <!--logo wrapper-->
     <div>
     <img src="./IMG/piccionex1.png" alt="freschezze al volo logo png" class="max-w-xs">
@@ -26,10 +26,10 @@
     </div>
     <div class="flex right-0 invisible absolute lg:visible" id="menuwrapper">
         <ul class="flex justify-center items-center flex-col text-4xl shadow-lg border-2 rounded-xl lg:flex-row lg:border-0 lg:shadow-none lg:text-3xl bg-white" style="color: #71086e; z-index: 1;">
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./Home.html"> HOME</a></li>
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./azienda.html"> AZIENDA</a></li>
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./prodotti.html"> PRODOTTI</a></li>
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./contatti.html"> CONTATTI</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./Home.html"> HOME</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./azienda.html"> AZIENDA</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./prodotti.html"> PRODOTTI</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./contatti.html"> CONTATTI</a></li>
         </ul>
 
     </div>
@@ -42,7 +42,7 @@
     <!--maps wrapper-->
     <div class="flex justify-center m-10">
         <!--MAPS FOR MOBILE-->
-        <div class="mapouter shadow-xl"><div class="gmap_canvas"><iframe width="490" height="390" id="gmap_canvas" src="https://maps.google.com/maps?q=contrada%20macchione-dirillo,%20vittoria,%20ragusa&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:390px;width:390px;}</style><a href="https://www.embedgooglemap.net">add google maps</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:390px;width:390px;}</style></div></div>
+        <div class="mapouter mt-20 shadow-xl"><div class="gmap_canvas"><iframe width="490" height="390" id="gmap_canvas" src="https://maps.google.com/maps?q=contrada%20macchione-dirillo,%20vittoria,%20ragusa&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:390px;width:390px;}</style><a href="https://www.embedgooglemap.net">add google maps</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:390px;width:390px;}</style></div></div>
 
     </div>
    
