--- a/Project/prodotti.html
+++ b/Project/prodotti.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Freschezze al volo Piccione</title>
 </head>
-<header class="flex align-baseline justify-between object-center items-center flex-col mt-4 lg:flex-row shadow-lg">
+<header class="flex align-baseline justify-between object-center items-center flex-col lg:flex-row shadow-lg bg-white fixed top-0 right-0 left-0 mt-0 z-50">
     <!--logo wrapper-->
     <div>
     <img src="./IMG/piccionex1.png" alt="freschezze al volo logo png" class="max-w-xs">
@@ -26,10 +26,10 @@
     </div>
     <div class="flex right-0 invisible absolute lg:visible" id="menuwrapper">
         <ul class="flex justify-center items-center flex-col text-4xl shadow-lg border-2 rounded-xl lg:flex-row lg:border-0 lg:shadow-none lg:text-3xl bg-white" style="color: #71086e; z-index: 1;">
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./Home.html"> HOME</a></li>
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./azienda.html"> AZIENDA</a></li>
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./prodotti.html"> PRODOTTI</a></li>
-            <li class="m-4 hover:text-4xl hover:underline"><a href="./contatti.html"> CONTATTI</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./Home.html"> HOME</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./azienda.html"> AZIENDA</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./prodotti.html"> PRODOTTI</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./contatti.html"> CONTATTI</a></li>
         </ul>
 
     </div>
@@ -41,8 +41,8 @@
 <body>
    
     <!--Central Phrase-->
-    <div class="flex flex-col justify-center text- items-center mt-10 text-center text-2xl">
-             <h1 class="font-bold text-3xl">I nostri prodotti</h1>
+    <div class="flex flex-col justify-center text- items-center mt-20 text-center text-2xl">
+             <h1 class="font-bold text-3xl pt-10">I nostri prodotti</h1>
              <br>
              <p>Le melanzane non sono tutte uguali! <br> Ne esistono infatti molte verietà. <br> Noi siamo specializzati nella coltivazione di:</p>
              <br>
