fixed css added graphics

--- a/Project/Home.html
+++ b/Project/Home.html
@@ -87,12 +87,12 @@
            <div class="mt-20 mb-20 lg:flex lg:items-center lg:flex-row-reverse lg:ml-10 lg:mr-10">
             <!--Melanzana wrapper-->
             <div class="flex justify-center">
-                <img src="./IMG/ESEMPIO.jpg" alt="melanzana viola png" class="lg:max-w-xl">
+                <img src="./IMG/illustrazioni freschezze al volo/Mani che si stringono con ombra .png" alt="melanzana viola png" class="lg:max-w-xl">
     
             </div>
            
             <!--Frase wrapper-->
-            <div class="m-5 text-center">
+            <div class="m-5 text-center lg:text-3xl">
                 <h1>Siamo una delle principali aziende
                     integrate nella filiera ortofrutticola siciliana ed
                     italiana, che coltiva con i propri clienti relazioni di
