--- a/Project/azienda.html
+++ b/Project/azienda.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <title>Freschezze al volo Piccione Azienda</title>
 </head>
-<header class="flex align-baseline justify-between object-center items-center flex-col lg:flex-row shadow-lg bg-white fixed top-0 right-0 left-0 mt-0 z-50">
+<header class="flex align-baseline justify-between object-center items-center flex-col lg:flex-row shadow-lg bg-white fixed top-0 right-0 left-0 mt-0 z-50 h-auto">
     <!--logo wrapper-->
     <div>
     <img src="./IMG/piccionex1.png" alt="freschezze al volo logo png" class="max-w-xs">
@@ -41,7 +41,7 @@
 <body class="">
    
     <!--Central Phrase-->
-    <div class="flex flex-col justify-center items-center text-4xl mt-20 pt-20 mb-20">
+    <div class="flex flex-col justify-center items-center text-4xl mt-20 pt-20 mb-10 lg:mb-20">
              <h1>La nostra azienda</h1>
              <h2>Freschezze al volo</h2>
     </div>
@@ -55,7 +55,7 @@
          <div class="mt-10 mb-20 lg:flex lg:items-center lg:ml-10 lg:mr-10">
             <!--Melanzana wrapper-->
             <div class="flex justify-center">
-                <img src="./IMG/ESEMPIO.jpg" alt="melanzana viola png" class="lg:max-w-xl">
+                <img src="./IMG/illustrazioni freschezze al volo/agricoltore miniamal illustrazione cielo sfumato con ombra .png" alt="melanzana viola png" class="lg:max-w-xl">
     
             </div>
             <!--Melanzana wrapper EDN-->
@@ -148,12 +148,12 @@
 <!-- call to action for social END-->
 </body>
 <!--footer with company's info-->
-<footer class="bottom-0 w-full h-auto text-white flex justify-center flex-col lg:flex-row lg:justify-between lg:items-center" style="background-color: #71086e;">
+<footer class="bottom-0 w-full h-auto text-white flex justify-center flex-col lg:flex-row lg:justify-between lg:items-center" style="background: linear-gradient(17deg, rgba(66,6,66,1) 21%, rgba(200,14,188,1) 100%);">
     <!--Info-->
     <div class="text-center m-4">
         <h1 class="m-2">Freschezze al volo di Piccione</h1>
         <p>P. IVA: </p>
-         <p>Sede operativa Contrada Dirillo-Macchione <br>97019, Vittoria (RG)</p>
+        <p>Sede operativa Contrada Dirillo-Macchione <br>97019, Vittoria (RG)</p>
     </div>
     <!--Loghi-->
     <div class="flex flex-col justify-between items-center m-2 lg:flex-row">
