--- a/Project/prodotti.html
+++ b/Project/prodotti.html
@@ -159,12 +159,12 @@
 <!-- call to action for social END-->
 </body>
 <!--footer with company's info-->
-<footer class="bottom-0 w-full h-auto text-white flex justify-center flex-col lg:flex-row lg:justify-between lg:items-center" style="background-color: #71086e;">
+<footer class="bottom-0 w-full h-auto text-white flex justify-center flex-col lg:flex-row lg:justify-between lg:items-center" style="background: linear-gradient(17deg, rgba(66,6,66,1) 21%, rgba(200,14,188,1) 100%);">
     <!--Info-->
     <div class="text-center m-4">
         <h1 class="m-2">Freschezze al volo di Piccione</h1>
         <p>P. IVA: </p>
-         <p>Sede operativa Contrada Dirillo-Macchione <br>97019, Vittoria (RG)</p>
+        <p>Sede operativa Contrada Dirillo-Macchione <br>97019, Vittoria (RG)</p>
     </div>
     <!--Loghi-->
     <div class="flex flex-col justify-between items-center m-2 lg:flex-row">
