--- a/Project/Home.html
+++ b/Project/Home.html
@@ -39,7 +39,7 @@
 </div>
 
 </header>
-<body>
+<body class="font-serif">
    
     <!--melanzana centrale-->
     <div class="container mt-20 mb-20">
@@ -50,7 +50,7 @@
         </div>
         <!--Melanzana wrapper EDN-->
         <!--Frase wrapper-->
-        <div class="text-center mt-10">
+        <div class="text-center mt-10 lg:text-3xl">
             <h1>"Freschezza al Volo! <br>Tutto al tempo giusto, ma servito al volo!"</h1>
 
         </div>
@@ -73,7 +73,7 @@
             <!--Melanzana wrapper EDN-->
             
             <!--Frase wrapper-->
-            <div class="text-center m-5">
+            <div class="text-center m-5 lg:text-3xl">
                 <h1>Ogni giorno raccogliamo nei campi i nostri ortaggi,
                     li selezioniamo e li portiamo nei mercati e nei punti
                     vendita, sicuri di offrire sempre prodotti di qualità.</h1>
