--- a/Project/contatti.html
+++ b/Project/contatti.html
@@ -38,9 +38,9 @@
 </div>
 
 </header>
-<body class="">
+<body class="font-serif">
     <!--maps wrapper-->
-    <div class="flex justify-center m-10">
+    <div class="flex justify-center m-10 ">
         <!--MAPS FOR MOBILE-->
         <div class="mapouter mt-20 shadow-xl"><div class="gmap_canvas"><iframe width="490" height="390" id="gmap_canvas" src="https://maps.google.com/maps?q=contrada%20macchione-dirillo,%20vittoria,%20ragusa&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:390px;width:390px;}</style><a href="https://www.embedgooglemap.net">add google maps</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:390px;width:390px;}</style></div></div>
 
@@ -48,7 +48,7 @@
    
    <!--maps wrapper END-->
 
-   <div class="flex flex-col  items-center text-center">
+   <div class="flex flex-col  items-center text-center lg:text-3xl">
     <h2 class="text-2xl">Sede Operativa <br> Contrada Dirillo-Macchione</h2>
     <br>
     <p>97019, Vittoria (RG)</p>
