--- a/Project/Home.html
+++ b/Project/Home.html
@@ -45,7 +45,7 @@
     <div class="container mt-20 mb-20">
         <!--Melanzana wrapper-->
         <div class="flex justify-center pt-20">
-            <img src="./IMG/melanzana.png" alt="melanzana viola png" class="lg:max-w-xl">
+            <img src="./IMG/illustrazioni freschezze al volo/melanzana illustrazione con ombra_.png" alt="melanzana viola png" class="lg:max-w-xl">
 
         </div>
         <!--Melanzana wrapper EDN-->
@@ -67,7 +67,7 @@
          <div class="mt-10 mb-20 lg:flex lg:items-center lg:ml-10 lg:mr-10">
             <!--Melanzana wrapper-->
             <div class="flex justify-center">
-                <img src="./IMG/ESEMPIO.jpg" alt="melanzana viola png" class="lg:max-w-xl">
+                <img src="./IMG/illustrazioni freschezze al volo/Agricoltore su trattore illustrazione con ombra_.png" alt="melanzana viola png" class="lg:max-w-xl">
     
             </div>
             <!--Melanzana wrapper EDN-->
