--- a/Project/Home.html
+++ b/Project/Home.html
@@ -64,7 +64,7 @@
  
          <!--pic1 -->
 
-         <div class="mt-10 mb-20 lg:flex lg:items-center lg:ml-10 lg:mr-10">
+         <div class="mt-10 mb-20 lg:flex lg:items-center lg:ml-10 lg:mr-10 lg:center">
             <!--Melanzana wrapper-->
             <div class="flex justify-center">
                 <img src="./IMG/illustrazioni freschezze al volo/Agricoltore su trattore illustrazione con ombra_.png" alt="melanzana viola png" class="lg:max-w-xl">
