--- a/Project/prodotti.html
+++ b/Project/prodotti.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <title>Freschezze al volo Piccione</title>
+    <title>Freschezze al volo Prodotti</title>
 </head>
 <header class="flex align-baseline justify-between object-center items-center flex-col lg:flex-row shadow-lg bg-white fixed top-0 right-0 left-0 mt-0 z-50">
     <!--logo wrapper-->
