--- a/Project/Home.html
+++ b/Project/Home.html
@@ -26,7 +26,7 @@
         </button>
     </div>
     <div class="flex right-0 invisible absolute lg:visible" id="menuwrapper">
-        <ul class="flex justify-center items-center flex-col text-4xl shadow-lg border-2 rounded-xl lg:flex-row lg:border-0 lg:shadow-none lg:text-3xl bg-white" style="color: #71086e; z-index: 1;">
+        <ul class="flex justify-center items-center flex-col text-4xl shadow-lg border-2 rounded-xl lg:flex-row lg:border-0 lg:shadow-none lg:text-2xl bg-white" style="color: #71086e; z-index: 1;">
             <li class="m-4 hover:font-bold hover:underline"><a href="./Home.html"> HOME</a></li>
             <li class="m-4 hover:font-bold hover:underline"><a href="./azienda.html"> AZIENDA</a></li>
             <li class="m-4 hover:font-bold hover:underline"><a href="./prodotti.html"> PRODOTTI</a></li>
@@ -42,7 +42,7 @@
 <body class="font-serif">
    
     <!--melanzana centrale-->
-    <div class="container mt-20 mb-20">
+    <div class="container mt-20 mb-10">
         <!--Melanzana wrapper-->
         <div class="flex justify-center pt-20">
             <img src="./IMG/illustrazioni freschezze al volo/melanzana illustrazione con ombra_.png" alt="melanzana viola png" class="lg:max-w-xl">
@@ -50,7 +50,7 @@
         </div>
         <!--Melanzana wrapper EDN-->
         <!--Frase wrapper-->
-        <div class="text-center mt-10 lg:text-3xl">
+        <div class="text-center mt-10 lg:text-3xl italic">
             <h1>"Freschezza al Volo! <br>Tutto al tempo giusto, ma servito al volo!"</h1>
 
         </div>
