--- a/Project/azienda.html
+++ b/Project/azienda.html
@@ -25,7 +25,7 @@
         </button>
     </div>
     <div class="flex right-0 invisible absolute lg:visible" id="menuwrapper">
-        <ul class="flex justify-center items-center flex-col text-4xl shadow-lg border-2 rounded-xl lg:flex-row lg:border-0 lg:shadow-none lg:text-3xl bg-white" style="color: #71086e; z-index: 1;">
+        <ul class="flex justify-center items-center flex-col text-4xl shadow-lg border-2 rounded-xl lg:flex-row lg:border-0 lg:shadow-none lg:text-2xl bg-white" style="color: #71086e; z-index: 1;">
             <li class="m-4 hover:font-bold hover:underline"><a href="./Home.html"> HOME</a></li>
             <li class="m-4 hover:font-bold hover:underline"><a href="./azienda.html"> AZIENDA</a></li>
             <li class="m-4 hover:font-bold hover:underline"><a href="./prodotti.html"> PRODOTTI</a></li>
@@ -115,11 +115,11 @@
                 <h1 class="font-bold">Oggi FreschezzAIVolo, condotta dall'ultima
                     generazione della famiglia Piccione,</h1>
                     <h2>è impegnata nel proseguire e valorizzare l'antichissima
-                        produzione di ortaggi della provincia di Ragusa.
-                        "Il nostro mestiere ha radici lontane, ed è una sfida
+                        produzione di ortaggi della provincia di Ragusa. <br>
+                        <em> "Il nostro mestiere ha radici lontane, ed è una sfida
                         quotidiana che portiamo avanti da generazioni.
                         Portiamo sulla tavola degli italiani gusto e benessere, con
-                        prodottiselezionati, coltivati in modo sicuro e <b>sostenibile</b>.</h2>
+                        prodottiselezionati, coltivati in modo sicuro e <b>sostenibile</b>''</em>.</h2>
     
             </div>
         </div>
