addiing graphics fixing css

--- a/Project/azienda.html
+++ b/Project/azienda.html
@@ -105,7 +105,7 @@
          <div class="mt-10 mb-20 lg:flex lg:items-center lg:ml-10 lg:mr-10">
             <!--Melanzana wrapper-->
             <div class="flex justify-center">
-                <img src="./IMG/ESEMPIO.jpg" alt="melanzana viola png" class="lg:max-w-xl">
+                <img src="./IMG/illustrazioni freschezze al volo/Drone che annaffia illustrazione_.png" alt="melanzana viola png" class="lg:max-w-xl">
     
             </div>
             <!--Melanzana wrapper EDN-->
@@ -119,7 +119,7 @@
                         <em> "Il nostro mestiere ha radici lontane, ed è una sfida
                         quotidiana che portiamo avanti da generazioni.
                         Portiamo sulla tavola degli italiani gusto e benessere, con
-                        prodottiselezionati, coltivati in modo sicuro e <b>sostenibile</b>''</em>.</h2>
+                        prodotti selezionati, coltivati in modo sicuro e <b>sostenibile</b>''</em>.</h2>
     
             </div>
         </div>
@@ -138,9 +138,9 @@
 
     <!--loghi social-->
     <div class="flex justify-center items-center bottom-1">
-        <a href="#"> <img src="./IMG/whatsapp .png" alt="icona whatsapp png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 4rem;"> </a>
-        <a href="#"> <img src="./IMG/instagram.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 4rem;"> </a>
-        <a href="#"> <img src="./IMG/Messenger.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 4rem;"> </a>
+        <a href="https://wa.me/3333578640"> <img src="./IMG/whatsapp .png" alt="icona whatsapp png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
+        <a href="#"> <img src="./IMG/instagram.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
+        <a href="#"> <img src="./IMG/Messenger.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
     </div>
      <!--loghi social END-->
 </div>
