--- a/Project/contatti.html
+++ b/Project/contatti.html
@@ -49,17 +49,19 @@
    <!--maps wrapper END-->
 
    <div class="flex flex-col  items-center text-center lg:text-3xl">
+    <h2 class="text-2xl">Sede Legale <br> Via Alessandria, 285</h2>
+    <br>
     <h2 class="text-2xl">Sede Operativa <br> Contrada Dirillo-Macchione</h2>
     <br>
     <p>97019, Vittoria (RG)</p>
     <br>
     <p>P. Iva: </p>
     <br>
-    <p class="text-2xl">Numeri Uffici</p>
-    <p><b>Clienti</b>: 339000000</p>
-    <p><b>Fornitori</b>: 339000000</p>
-    <p><b>Amministrazione</b>: 339000000</p>
-    <p><b>e-Mail</b>: info@freschezzalvolo.com </p>
+    <p class="text-2xl" >Contatti</p>
+    <br>
+    <p><b>Tel.</b>: 333 35 78 640</p>
+   
+    <p><b>e-Mail</b>: <a href="mailto:info@freschezzalvolo.com"">info@freschezzalvolo.com</a></p>
    </div>
 <br>
 <br>
@@ -88,9 +90,9 @@
 
     <!--loghi social-->
     <div class="flex justify-center items-center bottom-1">
-        <a href="#"> <img src="./IMG/whatsapp .png" alt="icona whatsapp png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 4rem;"> </a>
-        <a href="#"> <img src="./IMG/instagram.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 4rem;"> </a>
-        <a href="#"> <img src="./IMG/Messenger.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 4rem;"> </a>
+        <a href="https://wa.me/3333578640"> <img src="./IMG/whatsapp .png" alt="icona whatsapp png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
+        <a href="#"> <img src="./IMG/instagram.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
+        <a href="#"> <img src="./IMG/Messenger.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
     </div>
      <!--loghi social END-->
 </div>
