--- a/Project/prodotti.html
+++ b/Project/prodotti.html
@@ -43,10 +43,18 @@
     <!--Central Phrase-->
     <div>
     <div class="flex flex-col justify-center text- items-center mt-20 pt-20 text-center text-2xl lg:text-3xl">
+
+       
              <h1 class="font-bold text-3xl pt-10">I nostri prodotti</h1>
              <br>
              <p>Le melanzane non sono tutte uguali! <br> Ne esistono infatti molte verietà. <br> Noi siamo specializzati nella coltivazione di:</p>
              <br>
+
+         <div class="lg:flex lg:items-center lg:justify-between">    
+            <div>
+                <img src="./IMG/illustrazioni freschezze al volo/Piccione con melanzane in braccio occhi toon illustrazione ridotto.png" alt="illustrazione piccione con melanzane tra le ali" class="lg:max-w-xl lg:pr-5">
+            </div>
+
              <ul class="text-center" style="color: #71086e;">
                 <li class="m-1"> <a href="#viola" class="text-2xl hover:underline hover:font-bold scroll-smooth">Melanzana Viola</a> </li>
                 <li class="m-1"> <a href="#tonda" class="text-2xl hover:underline hover:font-bold">Melanzana Tonda</a> </li>
@@ -54,6 +62,7 @@
                 <li class="m-1"> <a href="#lunga" class="text-2xl hover:underline hover:font-bold">Melanzana Lunga</a> </li>
                 <li class="m-1"> <a href="#perlina" class="text-2xl hover:underline hover:font-bold">Melanzana Perlina</a> </li>
              </ul>
+        </div>
     </div>
   <!--Central Phrase-->
   <br>
@@ -107,7 +116,7 @@
          <div class="mt-10 mb-20 lg:flex lg:items-center lg:ml-10 lg:mr-10 lg:flex-row-reverse lg:justify-between">
             <!--Melanzana wrapper-->
             <div class="flex justify-center ">
-                <img src="./IMG/illustrazioni freschezze al volo/Melanzana Tonda illustrazione con ombra_.png" alt="melanzana tonda png" class="lg:max-w-xl" id="tonda">
+                <img src="./IMG/illustrazioni freschezze al volo/Melenzana tonda illustrazione con ombra (panciuta).png" alt="melanzana tonda png" class="lg:max-w-xl" id="tonda">
     
             </div>
             <!--Melanzana wrapper EDN-->
@@ -293,12 +302,11 @@
 </div>
 <!--call to action phrase END-->
 
-    <!--loghi social-->
-    <div class="flex justify-center items-center bottom-1">
-        <a href="#"> <img src="./IMG/whatsapp .png" alt="icona whatsapp png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 4rem;"> </a>
-        <a href="#"> <img src="./IMG/instagram.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 4rem;"> </a>
-        <a href="#"> <img src="./IMG/Messenger.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 4rem;"> </a>
-    </div>
+<div class="flex justify-center items-center bottom-1">
+    <a href="https://wa.me/3333578640"> <img src="./IMG/whatsapp .png" alt="icona whatsapp png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
+    <a href="#"> <img src="./IMG/instagram.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
+    <a href="#"> <img src="./IMG/Messenger.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
+</div>
      <!--loghi social END-->
 </div>
 </div>
