added perlina in products

--- a/Project/azienda.html
+++ b/Project/azienda.html
@@ -138,8 +138,8 @@
     <!--loghi social-->
     <div class="flex justify-center items-center bottom-1">
         <a href="https://wa.me/3333578640"> <img src="./IMG/whatsapp .png" alt="icona whatsapp png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
-        <a href="#"> <img src="./IMG/instagram.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
-        <a href="#"> <img src="./IMG/Messenger.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
+        <a href="https://www.instagram.com/freschezzaalvolo/"> <img src="./IMG/instagram.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 5rem;"> </a>
+        <a href="https://m.me/111272078315078"> <img src="./IMG/Messenger.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 5rem;"> </a>
     </div>
      <!--loghi social END-->
 </div>
