--- a/Project/prodotti.html
+++ b/Project/prodotti.html
@@ -252,7 +252,7 @@
         <div class="mt-10 mb-20 lg:flex lg:items-center lg:ml-10 lg:mr-10 lg:justify-between">
             <!--Melanzana wrapper-->
             <div class="flex justify-center">
-                <img src="./IMG/illustrazioni freschezze al volo/Melanzana lunga illustrazione ombra_.png" alt="melanzana perlina illustrazione png" class="lg:max-w-xl" id="perlina">
+                <img src="./IMG/illustrazioni freschezze al volo/Melanzana Perlina illustrazione con ombra.png" alt="melanzana perlina illustrazione png" class="lg:max-w-xl" id="perlina">
     
             </div>
             <!--Melanzana wrapper EDN-->
@@ -301,12 +301,13 @@
 </div>
 <!--call to action phrase END-->
 
+<!--loghi social-->
 <div class="flex justify-center items-center bottom-1">
     <a href="https://wa.me/3333578640"> <img src="./IMG/whatsapp .png" alt="icona whatsapp png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
-    <a href="#"> <img src="./IMG/instagram.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 5rem;"> </a>
-    <a href="#"> <img src="./IMG/Messenger.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 5rem;"> </a>
+    <a href="https://www.instagram.com/freschezzaalvolo/"> <img src="./IMG/instagram.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 5rem;"> </a>
+    <a href="https://m.me/111272078315078"> <img src="./IMG/Messenger.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 5rem;"> </a>
 </div>
-     <!--loghi social END-->
+ <!--loghi social END-->
 </div>
 </div>
 <!-- call to action for social END-->
