--- a/Project/contatti.html
+++ b/Project/contatti.html
@@ -67,7 +67,7 @@
     <h1 class="text-xl font-bold">Seguici su tutti i nostri Social</h1>
     <div class="flex ">
           <a href="#"> <img src="./IMG/LinkedIn Logo.png" alt="icona linkedin png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 4rem;"> </a>
-           <a href="#"> <img src="./IMG/instagram.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 4rem;"> </a>
+          <a href="https://www.instagram.com/freschezzaalvolo/"> <img src="./IMG/instagram.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 4rem;"> </a>
           <a href="#"> <img src="./IMG/facebook.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 4rem;"> </a>
     </div>
    </div>
@@ -86,13 +86,13 @@
 </div>
 <!--call to action phrase END-->
 
-    <!--loghi social-->
-    <div class="flex justify-center items-center bottom-1">
-        <a href="https://wa.me/3333578640"> <img src="./IMG/whatsapp .png" alt="icona whatsapp png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
-        <a href="#"> <img src="./IMG/instagram.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
-        <a href="#"> <img src="./IMG/Messenger.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
-    </div>
-     <!--loghi social END-->
+  <!--loghi social-->
+  <div class="flex justify-center items-center bottom-1">
+    <a href="https://wa.me/3333578640"> <img src="./IMG/whatsapp .png" alt="icona whatsapp png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 6rem;"> </a>
+   
+    <a href="https://m.me/111272078315078"> <img src="./IMG/Messenger.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 5rem;"> </a>
+</div>
+ <!--loghi social END-->
 </div>
 </div>
 <!-- call to action for social END-->
