added last graphic
Added last. graphic, fixed css

--- a/Project/azienda.html
+++ b/Project/azienda.html
@@ -78,7 +78,7 @@
          <div class="mt-10 mb-20 lg:flex lg:items-center lg:ml-10 lg:mr-10 lg:flex-row-reverse">
             <!--Melanzana wrapper-->
             <div class="flex justify-center">
-                <img src="./IMG/ESEMPIO.jpg" alt="melanzana viola png" class="lg:max-w-xl">
+                <img src="./IMG/illustrazioni freschezze al volo/Agricoltori generazioni illustrazione sfondo resized.png" alt="Famiglia di agricoltori dal nonno al nipote png" class="lg:max-w-3xl">
     
             </div>
             <!--Melanzana wrapper EDN-->
