--- a/Project/Home.html
+++ b/Project/Home.html
@@ -45,7 +45,7 @@
     <div class="mt-10 pt-10 mb-10 flex flex-col items-center">
         <!--Melanzana wrapper-->
         <div class="flex justify-center pt-20 mt-20 lg:pt-10 items-center lg:mt-0">
-            <img src="./IMG/illustrazioni freschezze al volo/Illustrazione sfondi nuovi/Cassetta melenzane sfondo new.png" alt="cassetta melenzane ortaggi illistrazione con ombra" class="lg:max-w-7xl max-w-md">
+            <img src="./IMG/illustrazioni freschezze al volo/Illustrazione sfondi nuovi/Melenzane su prato illustrazione_.png" alt="cassetta melenzane ortaggi illistrazione con ombra" class="lg:max-w-7xl max-w-md">
 
         </div>
         <!--Melanzana wrapper EDN-->
