--- a/Project/contatti.html
+++ b/Project/contatti.html
@@ -26,7 +26,7 @@
     </div>
     <div class="flex right-0 invisible absolute lg:visible" id="menuwrapper">
         <ul class="flex justify-center items-center flex-col text-4xl shadow-lg border-2 rounded-xl lg:flex-row lg:border-0 lg:shadow-none lg:text-2xl bg-white" style="color: #71086e; z-index: 1;">
-            <li class="m-4 hover:font-bold hover:underline"><a href="./Home.html"> HOME</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./index.html"> HOME</a></li>
             <li class="m-4 hover:font-bold hover:underline"><a href="./azienda.html"> AZIENDA</a></li>
             <li class="m-4 hover:font-bold hover:underline"><a href="./prodotti.html"> PRODOTTI</a></li>
             <li class="m-4 hover:font-bold hover:underline"><a href="./contatti.html"> CONTATTI</a></li>
@@ -49,22 +49,19 @@
    <!--maps wrapper END-->
 
    <div class="flex flex-col  items-center text-center lg:text-3xl">
-    <h2 class="text-2xl">Sede Legale <br> Via Alessandria, 285</h2>
-    <br>
-    <h2 class="text-2xl">Sede Operativa <br> Contrada Dirillo-Macchione</h2>
-    <br>
-    <p>97019, Vittoria (RG)</p>
-    <br>
-   
+ <br>
     <p class="text-2xl" >Contatti</p>
+    <br> 
     <p><b>Tel.</b>: 333 35 78 640</p>
+    <br>
    
-    <p><b>e-Mail</b>: <a href="mailto:info@freschezzalvolo.com"">info@freschezzalvolo.com</a></p>
+    <p><b>e-Mail</b>: <a href="mailto:info@freschezzalvolo.com" class="hover:underline">info@freschezzalvolo.com</a></p>
    </div>
 <br>
 <br>
    <div class="items-center flex flex-col justify-center">
     <h1 class="text-xl font-bold">Seguici su tutti i nostri Social</h1>
+    <br>
     <div class="flex ">
           <a href="#"> <img src="./IMG/LinkedIn Logo.png" alt="icona linkedin png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 4rem;"> </a>
           <a href="https://www.instagram.com/freschezzaalvolo/"> <img src="./IMG/instagram.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce" style="max-width: 4rem;"> </a>
