--- a/Project/prodotti.html
+++ b/Project/prodotti.html
@@ -26,7 +26,7 @@
     </div>
     <div class="flex right-0 invisible absolute lg:visible" id="menuwrapper">
         <ul class="flex justify-center items-center flex-col text-4xl shadow-lg border-2 rounded-xl lg:flex-row lg:border-0 lg:shadow-none lg:text-2xl bg-white" style="color: #71086e; z-index: 1;">
-            <li class="m-4 hover:font-bold hover:underline"><a href="./Home.html"> HOME</a></li>
+            <li class="m-4 hover:font-bold hover:underline"><a href="./index.html"> HOME</a></li>
             <li class="m-4 hover:font-bold hover:underline"><a href="./azienda.html"> AZIENDA</a></li>
             <li class="m-4 hover:font-bold hover:underline"><a href="./prodotti.html"> PRODOTTI</a></li>
             <li class="m-4 hover:font-bold hover:underline"><a href="./contatti.html"> CONTATTI</a></li>
@@ -42,17 +42,25 @@
    
     <!--Central Phrase-->
     <div>
-    <div class="flex flex-col justify-center text- items-center mt-20 pt-20 text-center text-2xl lg:text-3xl">
+    <div class="flex flex-col justify-center text- items-center mt-20 pt-20 text-center text-2xl lg:text-3xl lg:flex-">
+        <div class="flex flex-col lg:flex-row items-center">
+        <div>
+            <img src="./IMG/illustrazioni freschezze al volo/Piccione con melanzane in braccio occhi Toon.png" alt="illustrazione piccione con melanzane tra le ali" class="lg:max-w-xl lg:pr-5">
+        </div>
 
-       
-             <h1 class="font-bold text-3xl lg:text-5xl pt-10">I nostri prodotti</h1>
-             <br>
-             <p class="lg:text-5xl">Le melanzane non sono tutte uguali! <br> Ne esistono infatti molte verietà. <br> Noi siamo specializzati nella coltivazione di:</p>
-             <br>
+
+            <div class="text-center lg:text-left">
+                 <h1 class="font-bold text-3xl lg:text-5xl pt-10">I nostri prodotti</h1>
+                <br>
+                <p class="lg:text-5xl">Le melanzane non sono tutte uguali! <br> Ne esistono infatti molte verietà. <br> Noi siamo specializzati nella coltivazione di:</p>
+                <br>
+
+            </div>     
+        </div>
 
          <div class="lg:flex lg:items-center lg:justify-between">    
             <div>
-                <img src="./IMG/illustrazioni freschezze al volo/Illustrazione sfondi nuovi/Piccione con melanzane in braccio sfondo new_.png" alt="illustrazione piccione con melanzane tra le ali" class="lg:max-w-xl lg:pr-5">
+              
             </div>
 
              <ul class="text-center lg:text-5xl" style="color: #71086e;">
