added new graphics
last

--- a/Project/azienda.html
+++ b/Project/azienda.html
@@ -76,7 +76,7 @@
 
           <!--pic2 -->
 
-         <div class="mt-10 mb-20 lg:flex lg:items-center lg:flex-row-reverse" style="background-image: url(./IMG/Grey\ BG.png);"> 
+         <div class="mt-10 mb-20 lg:flex lg:items-center lg:flex-row-reverse" style="background-image: url(./IMG/viola\ melanzana\ bg_.png);"> 
             <!--Melanzana wrapper-->
             <div class="flex justify-center">
                 <img src="./IMG/illustrazioni freschezze al volo/Agricoltori generazioni illustrazione.png" alt="Famiglia di agricoltori dal nonno al nipote png" class="lg:max-w-3xl">
@@ -85,7 +85,7 @@
             <!--Melanzana wrapper EDN-->
             
             <!--Frase wrapper-->
-            <div class="text-center lg:text-right m-5 lg:text-3xl" >
+            <div class="text-center lg:text-left m-5 lg:text-3xl" >
                 <h1 class="font-bold italic"> Una storia di famiglia dal 1983 </h1>
                     <h2>Da allora tale vocazione è stata custodita e tramandata
                         nel tempo, con la volontà di perfezionarci e farci
