--- a/Project/index.html
+++ b/Project/index.html
@@ -26,7 +26,7 @@
         </button>
     </div>
     <div class="flex right-0 invisible absolute lg:visible" id="menuwrapper">
-        <ul class="flex justify-center items-center flex-col text-4xl shadow-lg border-2 rounded-xl lg:flex-row lg:border-0 lg:shadow-none lg:text-2xl bg-white" style="color: #71086e; z-index: 1;">
+        <ul class="flex justify-center items-center flex-col text-4xl shadow-lg border-2 rounded-xl lg:flex-row lg:border-0 lg:shadow-none lg:text-2xl bg-white lg:mr-4" style="color: #71086e; z-index: 1;">
             <li class="m-4 hover:font-bold hover:underline"><a href="./index.html"> HOME</a></li>
             <li class="m-4 hover:font-bold hover:underline"><a href="./azienda.html"> AZIENDA</a></li>
             <li class="m-4 hover:font-bold hover:underline"><a href="./prodotti.html"> PRODOTTI</a></li>
@@ -148,19 +148,26 @@
 <!-- call to action for social END-->
 </body>
 <!--footer with company's info-->
-    <footer class="bottom-0 w-full h-auto text-white flex justify-center flex-col lg:flex-row lg:justify-between lg:items-center" style="background: linear-gradient(17deg, rgba(66,6,66,1) 21%, rgba(200,14,188,1) 100%);">
-        <!--Info-->
-        <div class="text-center m-4">
-            <h1 class="m-2">Freschezze al volo di Piccione</h1>
-            <p>Sede operativa Contrada Dirillo-Macchione <br>97019, Vittoria (RG)</p>
-        </div>
-        <!--Loghi-->
-        <div class="flex flex-col justify-between items-center m-2 lg:flex-row">
-            <a href="https://www.abiomed.it/it/"><img src="./IMG/Logo Naturosa vettoriale + R web.gif" alt="Logo associato Naturosa" class="w-20 h-auto bg-white rounded-xl m-2 p-2"></a>
-            <a href="https://www.abiomed.it/it/abiomed-organizzazione-di-produttori-sicilia.html"><img src="./IMG/mini logo Abiomed per web 5x2.png" alt="Logo associato Abiomed" class="rounded-xl m-2"></a>
-        </div>
-        
+<footer class="bottom-0 w-full h-auto text-white flex justify-center flex-col lg:flex-row lg:justify-between lg:items-center" style="background: linear-gradient(17deg, rgba(66,6,66,1) 21%, rgba(200,14,188,1) 100%);">
+    <!--Loghi-->
+    <div class="flex flex-col justify-between items-center m-5 lg:flex-row">
+       <a href="https://www.abiomed.it/it/"><img src="./IMG/Logo Naturosa vettoriale + R web.gif" alt="Logo associato Naturosa" class="w-20 h-auto bg-white rounded-xl m-2 p-2"></a>
+       <a href="https://www.abiomed.it/it/abiomed-organizzazione-di-produttori-sicilia.html"><img src="./IMG/mini logo Abiomed per web 5x2.png" alt="Logo associato Abiomed" class="rounded-xl m-2"></a>
+   </div>
+   
+  <!--Info-->
+  <div class="text-center m-10">
+   <h1 class="m-2">Freschezze al volo di Piccione</h1>
+   <p>Sede operativa Contrada Dirillo-Macchione <br>97019, Vittoria (RG)</p>
+</div>
 
-    </footer>
+<div class="flex m-5">
+   <a href="#"> <img src="./IMG/LinkedIn R.png" alt="icona linkedin png" class="m-2 ml-5 mr-5 hover:animate-bounce max-w-xs" > </a>
+   <a href="https://www.instagram.com/freschezzaalvolo/"> <img src="./IMG/instagram R.png" alt="icona instagram png" class="m-2 ml-5 mr-5 hover:animate-bounce"> </a>
+   <a href="#"> <img src="./IMG/facebook R.png" alt="icona messenger png" class="m-2 ml-5 mr-5 hover:animate-bounce" > </a>
+</div>
+ 
+
+</footer>
 <script src="index.js"></script>
 </html>
